--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "autoprefixer": "^10.4.14",
     "dotenv": "^16.0.3",
     "firebase": "^9.21.0",
+    "formik": "^2.2.9",
     "postcss": "^8.4.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image-file-resizer": "^0.4.8",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.0",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
