--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.3",
     "firebase": "^9.21.0",
     "formik": "^2.2.9",
+    "framer-motion": "^10.12.8",
     "postcss": "^8.4.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
