--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "autoprefixer": "^10.4.14",
+    "browser-image-compression": "^2.0.2",
     "dotenv": "^16.0.3",
     "firebase": "^9.21.0",
     "formik": "^2.2.9",
