--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "tailwind-scrollbar": "^3.0.2",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
